--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -217,6 +217,199 @@
                     </div>
                 </div>
             </div>
+            <!-- affordable programe section  -->
+            <div class="liveProgram">
+                <div class="programCard">
+                    <h2>Affordable Program</h2>
+                    <p>Get your program with live "instructor led" learning.</p>
+                    <div class="mainCard">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Affordable Programs</h4>
+                            <p>Find your favourite courses in pocket-friendly ways</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                        <div class="card-image">
+                            <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                        </div>
+                        <h4>Full Stack Data Science Master</h4>
+                        <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                        <div class="coursePrice">
+                            <p>23000.00</p>
+                            <div class="livebox">
+                                <p>Live</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- community Programs section  -->
+            <div class="liveProgram">
+                <div class="programCard">
+                    <h2>Community Program</h2>
+                    <p>Get your program with live "instructor led" learning.</p>
+                    <div class="mainCard">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                        <div class="card-image">
+                            <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                        </div>
+                        <h4>Full Stack Data Science Master</h4>
+                        <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                        <div class="coursePrice">
+                            <p>23000.00</p>
+                            <div class="livebox">
+                                <p>Live</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- one Neuron section  -->
+            <div class="liveProgram">
+                <div class="programCard">
+                    <h2>One Neuron</h2>
+                    <p>Get your program with live "instructor led" learning.</p>
+                    <div class="mainCard">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                        <div class="card-image">
+                            <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                        </div>
+                        <h4>Full Stack Data Science Master</h4>
+                        <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                        <div class="coursePrice">
+                            <p>23000.00</p>
+                            <div class="livebox">
+                                <p>Live</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- test Series section  -->
+            <div class="liveProgram">
+                <div class="programCard">
+                    <h2>Test Series</h2>
+                    <p>Get your program with live "instructor led" learning.</p>
+                    <div class="mainCard">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                        <div class="card-image">
+                            <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                        </div>
+                        <h4>Full Stack Data Science Master</h4>
+                        <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                        <div class="coursePrice">
+                            <p>23000.00</p>
+                            <div class="livebox">
+                                <p>Live</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
