--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -136,36 +136,42 @@
                 <div class="hallCard"> 
                     <div class="peopleCard">
                         <div class="livecard">
-                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/6451d16b1a5feb001a75c38a.jpeg" alt="livecard">
+                            <img src="./images/peoplephoto/62d644c4a9f208001abf774a.jpg" alt="livecard">
                         </div>
                         <div class="liveCardname">
                             <h4>Name</h4>
                             <p>facebook, frontend developer</p>
                             <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
                         </div>
-                        <img src="#" alt="linkedin">
+                        <div class="linkedin-image">
+                            <img src="./images/ourproduct/icons8-linkedin-64.png" alt="linkedin">
+                        </div>
                     </div>
                     <div class="peopleCard">
                         <div class="livecard">
-                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/646308351a5feb001a786e75.jpeg" alt="livecard">
+                            <img src="./images/peoplephoto/64480a601a5feb001a742c03.jpg" alt="livecard">
                         </div>
                         <div class="liveCardname">
                             <h4>Name</h4>
                             <p>facebook, frontend developer</p>
                             <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
                         </div>
-                        <img src="#" alt="linkedin">
+                        <div class="linkedin-image">
+                            <img src="./images/ourproduct/icons8-linkedin-64.png" alt="linkedin">
+                        </div>
                     </div>
                     <div class="peopleCard">
                         <div class="livecard">
-                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/6451d16b1a5feb001a75c38a.jpeg" alt="livecard">
+                            <img src="./images/peoplephoto/646308351a5feb001a786e75.jpg" alt="livecard">
                         </div>
                         <div class="liveCardname">
                             <h4>Name</h4>
                             <p>facebook, frontend developer</p>
                             <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
                         </div>
-                        <img src="#" alt="linkedin">
+                        <div class="linkedin-image">
+                            <img src="./images/ourproduct/icons8-linkedin-64.png" alt="linkedin">
+                        </div>
                     </div>
                 </div>
             </div>
