--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -59,19 +59,19 @@
                         </div>
                 </div>
                 <div class="achievmentCard">
-                    <div class="card">
+                    <div class="nocard">
                         <div class="card-img">
                             <img src="./images/books-icon.svg" alt="books images">
                         </div>
                         <h3>300+ <br> <span>Different Courses</span> </h3>
                     </div>
-                    <div class="card">
+                    <div class="nocard">
                         <div class="card-img">
                             <img src="./images/books-icon.svg" alt="books images">
                         </div>
                         <h3>4,00,000+ <br> <span>Student Enrolled</span> </h3>
                     </div>
-                    <div class="card">
+                    <div class="nocard">
                         <div class="card-img">
                             <img src="./images/books-icon.svg" alt="books images">
                         </div>
@@ -424,6 +424,65 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Hackathon Companies  -->
+            <div class="achievment">
+                <h2>Hackathon Companies</h2>
+                <div class="liveCardContainer">
+                    <div class="livecard">
+                        <img src="./images/achieverimage/fork.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/freshworks.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/geekyants.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/hitachi.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/ibm.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/impetus.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/informatica.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/kaplan.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/maveric.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/Metadome-ai.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/ms100.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/musigma.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/optimum.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/redbus.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/robosoft.png" alt="Live Card">
+                    </div>
+                </div>
+            </div>
+
+            <!-- our products  -->
+
+
+
+
+
 
         </div>
 
