--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -478,8 +478,28 @@
             </div>
 
             <!-- our products  -->
-
-
+            <div class="achivement">
+                <div class="hardworkHeading">
+                    <h2>Our products</h2>
+                </div>
+                <div class="achievmentCard">
+                    <div class="nocard">
+                        <div class="card-img">
+                            <img src="./images/books-icon.svg" alt="books images">
+                        </div>
+                    </div>
+                    <div class="nocard">
+                        <div class="card-img">
+                            <img src="./images/books-icon.svg" alt="books images">
+                        </div>
+                    </div>
+                    <div class="nocard">
+                        <div class="card-img">
+                            <img src="./images/books-icon.svg" alt="books images">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
