updated our product

--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -478,24 +478,30 @@
             </div>
 
             <!-- our products  -->
-            <div class="achivement">
-                <div class="hardworkHeading">
+            <div class="our-product">
+                <div class="ineuronHeading">
                     <h2>Our products</h2>
                 </div>
-                <div class="achievmentCard">
-                    <div class="nocard">
-                        <div class="card-img">
-                            <img src="./images/books-icon.svg" alt="books images">
+                <div class="ineuronServices">
+                    <div class="product-card">
+                        <div class="productCard-img">
+                            <img src="./images/ourproduct/neurolab-icon.svg" alt="books images">
+                        </div>
+                        <h4>Neuro Lab</h4>
+                        <p>Supercharge your project development with our robust lab</p>
+                    </div>
+                    <div class="product-card">
+                        <div class="productCard-img">
+                            <img src="./images/ourproduct/jobPortal-icon.svg" alt="books images">
+                            <h4>job Portal</h4>
+                            <p>Use exceptional templete for a stand-out resume minus the sign up process</p>
                         </div>
                     </div>
-                    <div class="nocard">
-                        <div class="card-img">
-                            <img src="./images/books-icon.svg" alt="books images">
-                        </div>
-                    </div>
-                    <div class="nocard">
-                        <div class="card-img">
-                            <img src="./images/books-icon.svg" alt="books images">
+                    <div class="product-card">
+                        <div class="productCard-img">
+                            <img src="./images/ourproduct/Internship-icon.svg" alt="books images">
+                            <h4>Internship Portal</h4>
+                            <p>iNeuron's self-placed Internship portal prioritises hands-on training with 570+ Internshipp projects</p>
                         </div>
                     </div>
                 </div>
