our product updated

--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -482,7 +482,7 @@
                 <div class="ineuronHeading">
                     <h2>Our products</h2>
                 </div>
-                <div class="ineuronServices">
+                <div class="ineuronServicestop">
                     <div class="product-card">
                         <div class="productCard-img">
                             <img src="./images/ourproduct/neurolab-icon.svg" alt="books images">
@@ -500,6 +500,22 @@
                     <div class="product-card">
                         <div class="productCard-img">
                             <img src="./images/ourproduct/Internship-icon.svg" alt="books images">
+                            <h4>Internship Portal</h4>
+                            <p>iNeuron's self-placed Internship portal prioritises hands-on training with 570+ Internshipp projects</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="ineuronServicebottom">
+                    <div class="product-card">
+                        <div class="productCard-img">
+                            <img src="./images/ourproduct/affilitatePortal-icon.svg" alt="books images">
+                            <h4>Internship Portal</h4>
+                            <p>iNeuron's self-placed Internship portal prioritises hands-on training with 570+ Internshipp projects</p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="productCard-img">
+                            <img src="./images/ourproduct/halloffame-icon.svg" alt="books images">
                             <h4>Internship Portal</h4>
                             <p>iNeuron's self-placed Internship portal prioritises hands-on training with 570+ Internshipp projects</p>
                         </div>
