--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -522,6 +522,53 @@
                     </div>
                 </div>
             </div>
+            <!-- Our Partnered Institutions section -->
+            <div class="hacksection">
+                <div class="hack-container">
+                    <h2>Our Partnered Institutions</h2>
+                </div>
+            </div>
+            <div class="partnercontainer">
+                <div class="partnercard">
+                    <div class="partnerlinks">
+                        <img src="./images/partner/taxila.svg" alt="Live Card">
+                    </div>
+                    <div class="partnerlinks">
+                        <img src="./images/partner/vit.svg" alt="Live Card">
+                    </div>
+                    <div class="partnerlinks">
+                        <img src="./images/partner/keit.svg" alt="Live Card">
+                    </div>
+                    <div class="partnerlinks">
+                        <img src="./images/partner/gim.svg" alt="Live Card">
+                    </div>
+                    <div class="partnerlinks">
+                        <img src="./images/partner/malnad-college.svg" alt="Live Card">
+                    </div>
+                </div>
+            </div>
+            <!-- footer section  -->
+            <div class="footer">
+                <div class="footer-address">
+                    <div class="footerlogo">
+                        <img src="./images/ineuron-logo.png" alt="logo">   
+                    </div>
+                    <div class="socialmedia">
+                        <div class="socialmedia-icons">
+                            <img src="" alt="facebook">
+                            <img src="" alt="twitter">
+                            <img src="" alt="linkedin">
+                            <img src="" alt="youtube">
+                            <img src="" alt="instagram">
+                            <img src="" alt="discord">
+                        </div>
+                    </div>
+                    <div class="yellowline"></div>
+                    <div class="address">
+                    </div>
+                </div>
+            </div>
+
 
 
 
