--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -549,23 +549,72 @@
             </div>
             <!-- footer section  -->
             <div class="footer">
-                <div class="footer-address">
+                <div class="footer-address footer-card">
                     <div class="footerlogo">
-                        <img src="./images/ineuron-logo.png" alt="logo">   
+                        <img src="./images/footer/ineuron-logo-white.png" alt="logo">   
                     </div>
                     <div class="socialmedia">
                         <div class="socialmedia-icons">
-                            <img src="" alt="facebook">
-                            <img src="" alt="twitter">
-                            <img src="" alt="linkedin">
-                            <img src="" alt="youtube">
-                            <img src="" alt="instagram">
-                            <img src="" alt="discord">
+                            <img src="./images/footer/facebook.png" alt="facebook">
+                            <img src="./images/footer/twitter.png" alt="twitter">
+                            <img src="./images/footer/linkedin.png" alt="linkedin">
+                            <img src="./images/footer/youtube.png" alt="youtube">
+                            <img src="./images/footer/instagram.png" alt="instagram">
+                            <img src="./images/footer/discord.png" alt="discord">
                         </div>
                     </div>
                     <div class="yellowline"></div>
                     <div class="address">
+                        <div class="location-icon">
+                            <img src="./images/placeholder.png" alt="">
+                        </div>
+                        <div class="address-location">
+                            <p>17th Floor Tower A, Bridge <br> Signature Towers,<br> Sannatammannahalli, Benalaru, <br> Karnataka 562129.</p>
+                        </div>
                     </div>
+                    <div class="email">
+                        <div class="mail-image">
+                            <img src="./images/footer/email.png" alt="">
+                        </div>
+                        <p>Email us: contact@ineuron.ai</p>
+                    </div>
+                </div>
+                <div class="company footer-card">
+                    <div class="company-container">
+                        <h5>Company</h5>
+                        <div class="yellowline">
+                        </div>
+                        <div class="company-links">
+                            <div class="aboutus">
+                                <a href="">about us</a>
+                                <a href="">Contact us</a>
+                            </div>
+                            <div class="community">
+                                <a href="">Community</a>
+                                <a href="">Hack-A-Thon</a>
+                            </div>
+                            <div class="faq">
+                                <a href="">FAQs</a>
+                                <a href="">Job Guarantee</a>
+                            </div>
+                            <div class="jobassitance">
+                                <a href="">Job Assistance</a>
+                                <a href="">Privacy policy</a>
+                            </div>
+                            <a href="">Terms and conditions</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- products  -->
+                <div class="products footer-card">
+                    <h5>Products</h5>
+                    <div class="yellowline">
+                    </div>
+                    <a href="">Neuro Lab</a>
+                    <a href="">Job Portal</a>
+                    <a href="">Internship portal</a>
+                    <a href="">Become an affiliate</a>
+                    <a href="">Hall of fame</a>
                 </div>
             </div>
 
