completed footer address

--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/65306cc498.js" crossorigin="anonymous"></script>
 
 </head>
@@ -555,8 +558,8 @@
                     </div>
                     <div class="socialmedia">
                         <div class="socialmedia-icons">
-                            <img src="./images/footer/facebook.png" alt="facebook">
-                            <img src="./images/footer/twitter.png" alt="twitter">
+                            <img src="./images/footer/facebook white.png" alt="facebook">
+                            <img src="./images/footer/twitter white.png" alt="twitter">
                             <img src="./images/footer/linkedin.png" alt="linkedin">
                             <img src="./images/footer/youtube.png" alt="youtube">
                             <img src="./images/footer/instagram.png" alt="instagram">
@@ -578,7 +581,11 @@
                         </div>
                         <p>Email us: contact@ineuron.ai</p>
                     </div>
+                    <div class="iso-mark">
+                        <img src="./images/footer/iso-9001-2015.svg" alt="">
+                    </div>
                 </div>
+                <!-- footer company section   -->
                 <div class="company footer-card">
                     <div class="company-container">
                         <h5>Company</h5>
@@ -605,7 +612,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- products  -->
+                <!-- footer products section  -->
                 <div class="products footer-card">
                     <h5>Products</h5>
                     <div class="yellowline">
