--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -57,7 +57,7 @@
                 <div class="hardworkHeading">
                     <h2>"Pure Hardwork, No Shortcuts!"
                     </h2>
-                        <div class="yellowline"> 
+                        <div class="yellowlinesmall"> 
                             <p></p>
                         </div>
                 </div>
