--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -29,7 +29,8 @@
                     </div>
                     <a href="index.html">My Courses</a>
                     <a href="index.html">ujjal</a>
-                    <img src="#" alt="icon of account holder">
+                    <img style="width: 50px; border-radius: 2em;" src="./images/peoplephoto/IMG_20230225_020659.jpg" alt="icon of account holder">
+
                 </div>
         </nav>
         <!-- here start the navbar links  -->
@@ -558,10 +559,10 @@
                     </div>
                     <div class="socialmedia">
                         <div class="socialmedia-icons">
-                            <img src="./images/footer/facebook white.png" alt="facebook">
-                            <img src="./images/footer/twitter white.png" alt="twitter">
-                            <img src="./images/footer/linkedin.png" alt="linkedin">
-                            <img src="./images/footer/youtube.png" alt="youtube">
+                            <img src="./images/footer/facebook (5).png" alt="facebook">
+                            <img src="./images/footer/twitter (2).png" alt="twitter">
+                            <img src="./images/footer/linkedin (2).png" alt="linkedin">
+                            <img src="./images/footer/youtube (2).png" alt="youtube">
                             <img src="./images/footer/instagram.png" alt="instagram">
                             <img src="./images/footer/discord.png" alt="discord">
                         </div>
