--- a/CSS/Q8POSITION/index.html
+++ b/CSS/Q8POSITION/index.html
@@ -5,8 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Position</title>
+    <style>
+        .container{
+            width: 100%;
+            height: 1200px;
+            background-color: #e78787;
+            display: flex;
+            justify-content: space-between;
+
+        }
+        .box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20%;
+            height: 150px;
+            background-color: #e5baa3;
+            margin: 10px;
+        }
+        .boxone{
+            position: relative;
+            top: 80px; left: 20px;
+        }
+        .boxtwo{
+            position: absolute;
+            top: 200px; left: 360px;
+        }
+        .boxthree{
+            position: sticky;
+            top: 10px;
+        }
+
+    </style>
 </head>
 <body>
-    
+<div class="container">
+    <div class="box boxone">
+        <h1>ONE</h1>
+    </div>
+    <div class="box boxtwo">
+        <h1>TWO</h1>
+    </div>
+    <div class="box boxthree">
+        <h1>THREE</h1>
+    </div>
+    <div class="box boxfour">
+        <h1>FOUR</h1>
+    </div>
+</div>
 </body>
 </html>
