--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -562,7 +562,7 @@
                             <img src="./images/footer/facebook (5).png" alt="facebook">
                             <img src="./images/footer/twitter (2).png" alt="twitter">
                             <img src="./images/footer/linkedin (2).png" alt="linkedin">
-                            <img src="./images/footer/youtube (2).png" alt="youtube">
+                            <img src="./images/footer/youtube (4).png" alt="youtube">
                             <img src="./images/footer/instagram.png" alt="instagram">
                             <img src="./images/footer/discord.png" alt="discord">
                         </div>
@@ -590,26 +590,28 @@
                 <div class="company footer-card">
                     <div class="company-container">
                         <h5>Company</h5>
-                        <div class="yellowline">
+                        <div class="short-yellowline">
                         </div>
                         <div class="company-links">
-                            <div class="aboutus">
+                            <div class="cmp aboutus">
                                 <a href="">about us</a>
                                 <a href="">Contact us</a>
                             </div>
-                            <div class="community">
+                            <div class="cmp community">
                                 <a href="">Community</a>
                                 <a href="">Hack-A-Thon</a>
                             </div>
-                            <div class="faq">
+                            <div class="cmp faq">
                                 <a href="">FAQs</a>
                                 <a href="">Job Guarantee</a>
                             </div>
-                            <div class="jobassitance">
+                            <div class="cmp jobassitance">
                                 <a href="">Job Assistance</a>
                                 <a href="">Privacy policy</a>
                             </div>
-                            <a href="">Terms and conditions</a>
+                            <div class="cmp jobassitance">
+                                <a href="">Terms and conditions</a>
+                            </div>
                         </div>
                     </div>
                 </div>
